# AI-Conference-Paper-Lists

./: .gitignore  AGENTS.md  GOAL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: update-core.yml
config/: baseline_issues.json  conferences.json  source_issues.json  sources.json
data/normalized/3dv/: 3dv2020.json  3dv2021.json  3dv2022.json  3dv2024.json  3dv2025.json  3dv2026.json
data/normalized/aaai/: aaai2020.json  aaai2021.json  aaai2022.json  aaai2023.json  aaai2024.json  aaai2025.json
data/normalized/acl/: acl2020.json  acl2021.json  acl2022.json
data/normalized/acml/: acml2020.json  acml2021.json  acml2022.json  acml2023.json  acml2024.json  acml2025.json
data/normalized/ai4x/: ai4x2025.json  (+1 more)
data/reports/: calendar_coverage.json  coverage.json  data_quality.json  latest_source_audit.json  latest_source_probes.json  source_gaps.json  status_summary.json  validation_audit.json
scripts/: audit_calendar_coverage.py  audit_latest_source_availability.py  audit_normalized.py  audit_validation_reports.py  build_conference_index.py  build_source_gap_report.py  build_status_summary.py  enrich_aaai_ojs_metadata.py  enrich_acl_anthology_bulk_bib.py  enrich_acl_anthology_metadata.py  enrich_arxiv_metadata.py  enrich_cvf_abstracts.py  enrich_ecva_metadata.py  enrich_ijcai_metadata.py  enrich_openreview_profiles.py  enrich_pmlr_metadata.py  harvest.py  harvest_matrix.py  probe_latest_sources.py  rebuild_coverage.py  validate_against_papercopilot.py
src/aicpl/: __init__.py  cli.py  harvesters.py  issues.py  paths.py  schema.py  util.py  validation.py
(+588 files in other folders)
